Ajuste al dinamismo jquery y ListarSociosServlet

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 # jdbc.x
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/
+jdbc.url=jdbc:mysql://localhost:3307/
 jdbc.schema=baloncesto_servlet
 jdbc.username=root
 jdbc.password=secret
